--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -1,35 +1,28 @@
-.home-container {
+/* Import slick-carousel CSS */
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
+.slider-container {
   position: relative;
+  height: 60vh; /* Adjust height as needed */
 }
 
-.home-image {
+.slider-image {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   object-fit: cover;
 }
 
+.text-overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
+}
 
 .home-title {
-  color: white; /* Change this to any color that is visible on your background */
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* This adds a shadow to the text to make it more readable */
-}
-
-.home-button {
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: orange;
-}
-
-.orange-button {
-  background-color: orange;
-  color: white; /* This changes the text color to white */
-}
-.home-logo {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  top: 20px;
-  left: 20px;
+  font-size: 2em;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
