--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -1,28 +1,40 @@
-/* Import slick-carousel CSS */
-@import "~slick-carousel/slick/slick.css";
-@import "~slick-carousel/slick/slick-theme.css";
-
-.slider-container {
+.hero_container {
   position: relative;
-  height: 60vh; /* Adjust height as needed */
+  width: 100%;
+  height: 100vh; /* Adjust this value to change the height of the slider */
 }
-
-.slider-image {
+.logo {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  height: 50px; /* adjust as needed */
+  z-index: 1;
+}
+.background_image {
+  position: absolute;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.text-overlay {
+.overlay_content {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white; /* Change this to the color of your text */
   text-align: center;
+  /* Add a background color with some opacity if needed */
+  background-color: rgba(0, 0, 0, 0.4);
 }
-
-.home-title {
-  font-size: 2em;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+.background_image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
